--- a/Machine Learning.ipynb
+++ b/Machine Learning.ipynb
@@ -37,7 +37,10 @@
     "### Machine Learning Models\n",
     "\n",
     "1. Preprocess dataframe\n",
-    "2. Load Word Embeddings\n"
+    "2. Load Word Embeddings\n",
+    "3. Train Models\n",
+    "4. Model Evaluation\n",
+    "5. Continue Training for More Epochs\n"
    ]
   },
   {
@@ -346,6 +349,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Build & Train Models"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
@@ -595,8 +605,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Model Evaluation\n",
-    "### Loss, Accuracy, and AUC_ROC graphs for training data"
+    "## 4. Model Evaluation\n",
+    "#### Loss, Accuracy, and AUC_ROC graphs for training data"
    ]
   },
   {
@@ -711,76 +721,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Evaluation on Test Data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import ast\n",
-    "from tqdm import tqdm\n",
-    "import re\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "import gc\n",
-    "import pickle\n",
-    "import json\n",
-    "tqdm.pandas()\n",
-    "\n",
-    "import tensorflow as tf\n",
-    "from keras.models import Sequential, Model, load_model\n",
-    "from keras.layers import Dense, Dropout, GRU,CuDNNGRU,Input, LSTM, Embedding, Bidirectional\n",
-    "from keras.layers import Flatten, Conv1D, MaxPooling1D, GlobalMaxPooling1D, TimeDistributed, BatchNormalization\n",
-    "from keras.layers import concatenate as lconcat\n",
-    "from keras.optimizers import SGD\n",
-    "from keras.preprocessing.text import Tokenizer\n",
-    "from keras.preprocessing.sequence import pad_sequences\n",
-    "from keras import backend as K\n",
-    "from keras.models import load_model\n",
-    "\n",
-    "#sess_config.gpu_options.allow_growth = True\n",
-    "from keras.backend.tensorflow_backend import set_session\n",
-    "config = tf.ConfigProto()\n",
-    "config.gpu_options.allow_growth = True\n",
-    "set_session(tf.Session(config=config))\n",
-    "from sklearn.metrics import roc_auc_score\n",
-    "from keras.utils import np_utils,plot_model, multi_gpu_model\n",
-    "from IPython.display import SVG\n",
-    "from keras.utils.vis_utils import model_to_dot\n",
-    "\n",
-    "from sklearn.model_selection import StratifiedShuffleSplit\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import MultiLabelBinarizer\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "\n",
-    "from sklearn.metrics import roc_auc_score\n",
-    "\n",
-    "# define roc_callback, inspired by https://github.com/keras-team/keras/issues/6050#issuecomment-329996505\n",
-    "def auc_roc(y_true, y_pred):\n",
-    "    # any tensorflow metric\n",
-    "    value, update_op = tf.metrics.auc(y_true,y_pred)\n",
-    "\n",
-    "    # find all variables created for this metric\n",
-    "    metric_vars = [i for i in tf.local_variables() if 'auc_roc' in i.name.split('/')[1]]\n",
-    "\n",
-    "    # Add metric variables to GLOBAL_VARIABLES collection.\n",
-    "    # They will be initialized for new session.\n",
-    "    for v in metric_vars:\n",
-    "        tf.add_to_collection(tf.GraphKeys.GLOBAL_VARIABLES, v)\n",
-    "\n",
-    "    # force to update metric values\n",
-    "    with tf.control_dependencies([update_op]):\n",
-    "        value = tf.identity(value)\n",
-    "        return value\n",
-    "    \n",
-    "X_test = pd.read_pickle(\"Pickles/X_test.pkl\")\n",
-    "y_test = pd.read_pickle(\"Pickles/y_test.pkl\")\n",
-    "docs_test = np.load(\"Pickles/docs_test.npy\")\n"
+    "## 4. Evaluation on Test Data\n",
+    "The three metrics are listed as<br>\n",
+    "[val_loss, val_accuracy, val_auc_roc]"
    ]
   },
   {
@@ -807,7 +750,6 @@
     }
    ],
    "source": [
-    "mlp = load_model(\"Data/models/mlp.hdf5\",custom_objects={\"auc_roc\":auc_roc})\n",
     "mlp.evaluate([docs_test,X_test],y_test,batch_size=64)"
    ]
   },
@@ -835,7 +777,7 @@
     }
    ],
    "source": [
-    "cnn = load_model(\"Data/models/cnn.hdf5\",custom_objects={\"auc_roc\":auc_roc})\n",
+    "\n",
     "cnn.evaluate([docs_test,X_test],y_test,batch_size=64)"
    ]
   },
@@ -899,7 +841,130 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "After 10 epochs, the RNN and RNN_CNN models generalize the best"
+    "After 10 epochs, the RNN and RNN_CNN models generalize the best. We can try extending training for more epochs to see how training improves. I focus on the CNN-RNN model as it has had comparable accuracy to the RNN model and was trained in half the time.\n",
+    "\n",
+    "## 5. Extend Training for More Epochs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train on 20457 samples, validate on 5013 samples\n",
+      "Epoch 1/20\n",
+      "20457/20457 [==============================] - 3591s 176ms/step - loss: 0.6170 - acc: 0.7403 - auc_roc: 0.8936 - val_loss: 0.9954 - val_acc: 0.5783 - val_auc_roc: 0.8809\n",
+      "Epoch 2/20\n",
+      "20457/20457 [==============================] - 3583s 175ms/step - loss: 0.5874 - acc: 0.7540 - auc_roc: 0.8790 - val_loss: 1.0010 - val_acc: 0.6090 - val_auc_roc: 0.8800\n",
+      "Epoch 3/20\n",
+      "20457/20457 [==============================] - 3602s 176ms/step - loss: 0.5611 - acc: 0.7678 - auc_roc: 0.8814 - val_loss: 1.0650 - val_acc: 0.5466 - val_auc_roc: 0.8819\n",
+      "Epoch 4/20\n",
+      "20457/20457 [==============================] - 3675s 180ms/step - loss: 0.5452 - acc: 0.7749 - auc_roc: 0.8823 - val_loss: 0.9959 - val_acc: 0.6112 - val_auc_roc: 0.8838\n",
+      "Epoch 5/20\n",
+      "20457/20457 [==============================] - 3677s 180ms/step - loss: 0.5164 - acc: 0.7895 - auc_roc: 0.8856 - val_loss: 1.0316 - val_acc: 0.6346 - val_auc_roc: 0.8873\n",
+      "Epoch 6/20\n",
+      "20457/20457 [==============================] - 3635s 178ms/step - loss: 0.5006 - acc: 0.7958 - auc_roc: 0.8889 - val_loss: 1.0785 - val_acc: 0.6246 - val_auc_roc: 0.8902\n",
+      "Epoch 7/20\n",
+      "20457/20457 [==============================] - 3596s 176ms/step - loss: 0.4855 - acc: 0.8056 - auc_roc: 0.8916 - val_loss: 1.1877 - val_acc: 0.5468 - val_auc_roc: 0.8921\n",
+      "Epoch 8/20\n",
+      "20457/20457 [==============================] - 3593s 176ms/step - loss: 0.4763 - acc: 0.8081 - auc_roc: 0.8926 - val_loss: 1.0903 - val_acc: 0.6066 - val_auc_roc: 0.8937\n",
+      "Epoch 9/20\n",
+      "20457/20457 [==============================] - 3589s 175ms/step - loss: 0.4610 - acc: 0.8184 - auc_roc: 0.8948 - val_loss: 1.1224 - val_acc: 0.6044 - val_auc_roc: 0.8957\n",
+      "Epoch 10/20\n",
+      "20457/20457 [==============================] - 3591s 176ms/step - loss: 0.4490 - acc: 0.8188 - auc_roc: 0.8967 - val_loss: 1.0704 - val_acc: 0.6278 - val_auc_roc: 0.8978\n",
+      "Epoch 11/20\n",
+      "20457/20457 [==============================] - 3589s 175ms/step - loss: 0.4410 - acc: 0.8241 - auc_roc: 0.8988 - val_loss: 1.1902 - val_acc: 0.6082 - val_auc_roc: 0.8995\n",
+      "Epoch 12/20\n",
+      "20457/20457 [==============================] - 3589s 175ms/step - loss: 0.4278 - acc: 0.8297 - auc_roc: 0.9003 - val_loss: 1.1402 - val_acc: 0.5992 - val_auc_roc: 0.9011\n",
+      "Epoch 13/20\n",
+      "20457/20457 [==============================] - 3590s 176ms/step - loss: 0.4199 - acc: 0.8335 - auc_roc: 0.9019 - val_loss: 1.1853 - val_acc: 0.6447 - val_auc_roc: 0.9026\n",
+      "Epoch 14/20\n",
+      "20457/20457 [==============================] - 3588s 175ms/step - loss: 0.4081 - acc: 0.8420 - auc_roc: 0.9034 - val_loss: 1.1476 - val_acc: 0.5978 - val_auc_roc: 0.9041\n",
+      "Epoch 15/20\n",
+      "20457/20457 [==============================] - 3619s 177ms/step - loss: 0.3984 - acc: 0.8439 - auc_roc: 0.9049 - val_loss: 1.1500 - val_acc: 0.6150 - val_auc_roc: 0.9055\n",
+      "Epoch 16/20\n",
+      "20457/20457 [==============================] - 3680s 180ms/step - loss: 0.4012 - acc: 0.8430 - auc_roc: 0.9062 - val_loss: 1.1901 - val_acc: 0.6114 - val_auc_roc: 0.9067\n",
+      "Epoch 17/20\n",
+      "20457/20457 [==============================] - 3678s 180ms/step - loss: 0.3848 - acc: 0.8496 - auc_roc: 0.9074 - val_loss: 1.2949 - val_acc: 0.5697 - val_auc_roc: 0.9078\n",
+      "Epoch 18/20\n",
+      "20457/20457 [==============================] - 3698s 181ms/step - loss: 0.3740 - acc: 0.8538 - auc_roc: 0.9083 - val_loss: 1.1910 - val_acc: 0.6260 - val_auc_roc: 0.9089\n",
+      "Epoch 19/20\n",
+      "20457/20457 [==============================] - 3700s 181ms/step - loss: 0.3693 - acc: 0.8579 - auc_roc: 0.9096 - val_loss: 1.1846 - val_acc: 0.6174 - val_auc_roc: 0.9101\n",
+      "Epoch 20/20\n",
+      "20457/20457 [==============================] - 3650s 178ms/step - loss: 0.3680 - acc: 0.8562 - auc_roc: 0.9106 - val_loss: 1.3391 - val_acc: 0.6383 - val_auc_roc: 0.9110\n"
+     ]
+    }
+   ],
+   "source": [
+    "history = rnn_cnn.fit(x = [docs_train,X_train],\n",
+    "                      y = y_train,\n",
+    "                      batch_size = 32,\n",
+    "                      epochs = 20,\n",
+    "                      verbose = 1,\n",
+    "                      validation_data = ([docs_test,X_test],y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rnn_cnn.save(\"Data/models/rnn_cnn1.hdf5\")\n",
+    "with open('Data/trainHistory/rnn_cnn1.pkl', 'wb') as file_pi:\n",
+    "    pickle.dump(history.history, file_pi)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Validation accuracy doesn't seem to be improving much, we can try training for another few epochs to be safe..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train on 20457 samples, validate on 5013 samples\n",
+      "Epoch 1/5\n",
+      "20457/20457 [==============================] - 3605s 176ms/step - loss: 0.3564 - acc: 0.8617 - auc_roc: 0.9115 - val_loss: 1.1948 - val_acc: 0.6010 - val_auc_roc: 0.9120\n",
+      "Epoch 2/5\n",
+      "20457/20457 [==============================] - 3605s 176ms/step - loss: 0.3480 - acc: 0.8661 - auc_roc: 0.9125 - val_loss: 1.2644 - val_acc: 0.5891 - val_auc_roc: 0.9130\n",
+      "Epoch 3/5\n",
+      "20457/20457 [==============================] - 3603s 176ms/step - loss: 0.3496 - acc: 0.8641 - auc_roc: 0.9134 - val_loss: 1.2522 - val_acc: 0.6369 - val_auc_roc: 0.9139\n",
+      "Epoch 4/5\n",
+      "20457/20457 [==============================] - 3589s 175ms/step - loss: 0.3410 - acc: 0.8680 - auc_roc: 0.9144 - val_loss: 1.4392 - val_acc: 0.6351 - val_auc_roc: 0.9147\n",
+      "Epoch 5/5\n",
+      "20457/20457 [==============================] - 3592s 176ms/step - loss: 0.3411 - acc: 0.8712 - auc_roc: 0.9150 - val_loss: 1.2874 - val_acc: 0.6022 - val_auc_roc: 0.9154\n"
+     ]
+    }
+   ],
+   "source": [
+    "history2 = rnn_cnn.fit(x = [docs_train,X_train],\n",
+    "                      y = y_train,\n",
+    "                      batch_size = 32,\n",
+    "                      epochs = 5,\n",
+    "                      verbose = 1,\n",
+    "                      validation_data = ([docs_test,X_test],y_test))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It doesn't look more epochs will improve the model any further"
    ]
   },
   {
